Add pylint stage to CI
- runs pylint against all python files in the project
- renames tests to allow pytest autocollection to work

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pyyaml = "*"
 [dev-packages]
 pytest = "*"
 black = "==21.6b0"
+pylint = "*"
+pytest-pylint = "*"
 
 [requires]
 python_version = "3.9"
