--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 image: gitlab.codethink.co.uk:5000/infrastructure/python-black-formatter:master
 
 stages:
-  - all_checks
+  - format_checks
+  - tests
 
-format_check:
-  stage: all_checks
+black:
+  stage: format_checks
   script:
     - |
       git rev-list origin/master..HEAD -- | while read commit
@@ -13,11 +14,20 @@ format_check:
         black --check ./
       done
 
-run_tests:
-  stage: all_checks
+pylint:
+  stage: format_checks
   script:
     - |
       python3 -m pip install pipenv
       pipenv install --dev --system
       export PYTHONPATH="$PYTHONPATH:."
-      pytest tests/*.py
+      pytest --pylint
+
+run_tests:
+  stage: tests
+  script:
+    - |
+      python3 -m pip install pipenv
+      pipenv install --dev --system
+      export PYTHONPATH="$PYTHONPATH:."
+      pytest
