--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,12 +18,12 @@ pylint:
   stage: format_checks
   script:
     - |
-      python3 -m pip install . pylint pyyaml
+      python3 -m pip install . -r requirements-dev.txt
       pylint lifecycle
 
 run_tests:
   stage: tests
   script:
     - |
-      python3 -m pip install . pytest pyyaml
+      python3 -m pip install . -r requirements-dev.txt
       pytest
