Tweaks discovered as followup from !6
- revert back to using pytest --pylint to make sure we're linting all 
files
- fix linter error in setup.py
- add auto-created lifecycle.egg-info to .gitignore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ pylint:
   script:
     - |
       python3 -m pip install .[dev]
-      pylint lifecycle
+      pytest --pylint
 
 run_tests:
   stage: tests
