--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,12 +31,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install .[dev]
     - name: Make sure lifecycle can be installed and run using pipenv
       run: |
         python -m pip install pipenv
-        pipenv install
+        pipenv install --skip-lock
         pipenv run lifecycle --help
