--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pytest --pylint
-  black:
+  pre-commit:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -36,10 +36,4 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev]
-    - name: Every commit must have been blackened
-      run: |
-        git rev-list origin/main..HEAD -- | while read commit
-        do
-          git checkout $commit
-          black --check ./
-        done
+    - uses: pre-commit/action@v3.0.0
