--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pytest --cov=lifecycle --cov-report=term --cov-report=xml
         cat coverage.xml
+        coverage report --fail-under=80
   smoketest:
     runs-on: ubuntu-latest
     steps:
