--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,15 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ct_lifecycle"
 description = "Assert the SSOT principle for users and groups across disparate applications and services."
-readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
-dynamic = ["version"]
+dynamic = ["version", "readme", "scripts", "dependencies", "optional-dependencies"]
+
+[tool.setuptools.dynamic]
+readme = {file = ["README.md"], content-type = "text/markdown"}
+version = {attr = "lifecycle.__version__"}
 
 [tool.setuptools_scm]
