--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,12 @@
 name: Generate Documentation
 
-on: push
+on:
+  - pull_request
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
     - uses: actions/checkout@v3
     - name: Build Docs
@@ -19,6 +21,7 @@ jobs:
         path: docs/build/html
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     if: github.ref == 'refs/heads/main'
     needs: generate
     permissions:
