ci: deploy documentation only on tag

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,7 @@
 name: Generate Documentation
 
 on:
+  - push
   - pull_request
 
 jobs:
@@ -22,13 +23,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    if: github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags')
     needs: generate
     permissions:
       pages: write
       id-token: write
     steps:
-    - name: Deploy Pages artifact
+    - name: Deploy Pages artifact on tag
       id: deployment
       uses: actions/deploy-pages@v1
       with:
